--- a/data.ipynb
+++ b/data.ipynb
@@ -2,11 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train size: 18928\n",
+      "Test size: 4732\n",
+      "Image size: (28, 28)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Data load and explore\n",
+    "X_train = np.load('dataset/Assignment2Data/X_train.npy')\n",
+    "X_test = np.load('dataset/Assignment2Data/X_test.npy')\n",
+    "y_train = np.load('dataset/Assignment2Data/y_train.npy')\n",
+    "y_test = np.load('dataset/Assignment2Data/y_test.npy')\n",
+    "\n",
+    "print(f\"Train size: {X_train.shape[0]}\\nTest size: {X_test.shape[0]}\\nImage size: {X_test.shape[1:]}\")\n"
    ]
   }
  ],
