--- a/data.ipynb
+++ b/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "metadata": {}
    },
@@ -24,12 +24,14 @@
     "from keras.utils import to_categorical\n",
     "from keras.callbacks import EarlyStopping\n",
     "from tensorflow.keras.callbacks import TensorBoard\n",
+    "import tensorflow as tf\n",
     "import pandas as pd\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "RANDOM_STATE = 0"
+    "RANDOM_STATE = 0\n",
+    "tf.random.set_seed(RANDOM_STATE)"
    ]
   },
   {
